home page conflict resolved

--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -5,14 +5,14 @@
   <title>Campus Store – Checkout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/homepage.css" />
 </head>
 <body>
   <!-- HEADER -->
   <header class="site-header">
     <div class="container nav" id="top">
       <a href="index.html#home" class="logo">
-        <img src="/home page/assets/logo.png" class="logo-img" alt="Sell Campus Logo">
+        <img src="asset/logo.png" class="logo-img" alt="Sell Campus Logo">
       </a>
 
       <nav class="nav-links" aria-label="Main">
