--- a/frontend/shipments.html
+++ b/frontend/shipments.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Products</title>
+  <title>Shipments</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/studentdashboard.css" />
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 
     <nav class="nav-links" aria-label="Main">
       <a href="dashboard.html" class="nav-link">Home</a>
-      <a href="products.html" class="nav-link active">Category</a>
+      <a href="products.html" class="nav-link">Category</a>
       <a href="customers.html" class="nav-link">About</a>
       <a href="settings.html" class="nav-link">Contact</a>
     </nav>
@@ -27,9 +27,9 @@
     </div>
 
     <div class="nav-icons">
-      <button class="nav-icon-btn"><i class="fa-solid fa-border-all icon"></i></button>
-      <button class="nav-icon-btn"><i class="fa-regular fa-bell icon"></i><span class="nav-icon-badge">3</span></button>
-      <button class="nav-icon-btn avatar-btn"><img class="avatar" src="https://i.pravatar.cc/80?img=12" alt="User"></button>
+      <button class="nav-icon-btn" aria-label="Apps"><i class="fa-solid fa-border-all icon"></i></button>
+      <button class="nav-icon-btn" aria-label="Notifications"><i class="fa-regular fa-bell icon"></i><span class="nav-icon-badge">3</span></button>
+      <button class="nav-icon-btn avatar-btn" aria-label="Profile"><img class="avatar" src="https://i.pravatar.cc/80?img=12" alt="User"></button>
     </div>
 
     <button class="nav-toggle" aria-label="Toggle navigation" id="nav-toggle"><span></span></button>
@@ -38,7 +38,7 @@
 
 <main>
   <section class="dash-hero short">
-    <div class="dash-hero-overlay"><h1>Products</h1></div>
+    <div class="dash-hero-overlay"><h1>Shipments</h1></div>
   </section>
 
   <section class="dash-wrap">
@@ -46,6 +46,7 @@
 
       <aside class="dash-sidebar" id="dash-sidebar">
         <button class="sidebar-close" id="sidebar-close" aria-label="Close sidebar"><i class="fa-solid fa-xmark"></i></button>
+
         <nav class="side-nav">
           <a class="side-link" href="dashboard.html" data-page="dashboard"><i class="fa-solid fa-table-columns"></i><span>Dashboard</span></a>
           <a class="side-link" href="products.html" data-page="products"><i class="fa-solid fa-box"></i><span>Products</span></a>
@@ -53,49 +54,74 @@
           <a class="side-link" href="orders.html" data-page="orders"><i class="fa-solid fa-cart-shopping"></i><span>Orders</span></a>
           <a class="side-link" href="shipments.html" data-page="shipments"><i class="fa-solid fa-truck"></i><span>Shipments</span></a>
           <a class="side-link" href="transactions.html" data-page="transactions"><i class="fa-solid fa-credit-card"></i><span>Transactions</span></a>
+
           <div class="side-divider"></div>
+
           <a class="side-link" href="settings.html" data-page="settings"><i class="fa-solid fa-gear"></i><span>Settings</span></a>
           <a class="side-link side-logout" href="dashboard.html" id="logout-btn"><i class="fa-solid fa-right-from-bracket"></i><span>Logout</span></a>
         </nav>
       </aside>
 
       <div class="dash-main">
+
         <div class="overview-bar">
           <div class="overview-left">
             <button class="sidebar-open" id="sidebar-open" aria-label="Open sidebar"><i class="fa-solid fa-bars"></i></button>
-            <h2>Products</h2>
+            <h2>Shipments</h2>
           </div>
 
           <div class="overview-right">
             <div class="overview-search">
               <i class="fa-solid fa-magnifying-glass"></i>
-              <input type="text" id="page-search" placeholder="Search products..." />
+              <input type="text" id="page-search" placeholder="Search shipments..." />
             </div>
             <img class="overview-avatar" src="https://i.pravatar.cc/80?img=12" alt="Profile">
           </div>
         </div>
 
         <div class="cards-grid single">
-          <section class="card card-wide" data-searchable="Notebook Headphones Bag Hoodie">
+          <section class="card card-wide" data-searchable="Shipments TRK-2001 DHL FedEx delivered in transit pending">
             <div class="card-head simple">
               <div>
-                <h3>Product List</h3>
-                <p class="muted small">Manage your items</p>
+                <h3>Shipment Tracking</h3>
+                <p class="muted small">Monitor delivery status</p>
               </div>
-              <button class="chip-btn">Add Product</button>
+              <button class="chip-btn">Create Label</button>
             </div>
 
             <div class="table-wrap">
               <table class="dash-table">
                 <thead>
                   <tr>
-                    <th>Name</th><th>Category</th><th>Stock</th><th>Price</th><th>Status</th>
+                    <th>Tracking</th>
+                    <th>Carrier</th>
+                    <th>Order</th>
+                    <th>ETA</th>
+                    <th>Status</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr><td>Crafted Notebook</td><td>Stationery</td><td>240</td><td>Tk. 150</td><td><span class="pill ok">Active</span></td></tr>
-                  <tr><td>Campus Backpack</td><td>Bags</td><td>80</td><td>Tk. 1950</td><td><span class="pill ok">Active</span></td></tr>
-                  <tr><td>Wireless Headphones</td><td>Audio</td><td>34</td><td>Tk. 2450</td><td><span class="pill warn">Low</span></td></tr>
+                  <tr>
+                    <td>TRK-2001</td>
+                    <td>DHL</td>
+                    <td>ORD-1001</td>
+                    <td>2026-01-20</td>
+                    <td><span class="pill ok">Delivered</span></td>
+                  </tr>
+                  <tr>
+                    <td>TRK-2002</td>
+                    <td>FedEx</td>
+                    <td>ORD-1002</td>
+                    <td>2026-01-22</td>
+                    <td><span class="pill warn">In Transit</span></td>
+                  </tr>
+                  <tr>
+                    <td>TRK-2003</td>
+                    <td>Pathao</td>
+                    <td>ORD-1003</td>
+                    <td>2026-01-21</td>
+                    <td><span class="pill warn">Pending</span></td>
+                  </tr>
                 </tbody>
               </table>
             </div>
