header removed from all the dashboard

--- a/frontend/UserDashboard.html
+++ b/frontend/UserDashboard.html
@@ -35,9 +35,16 @@
           </label>
 
           <nav class="side-nav">
+
+            <a class="side-link" href="index.html">
+              <i class="fa-solid fa-house"></i><span>Home</span>
+            </a>
+
             <a class="side-link active" href="UserDashboard.html">
               <i class="fa-solid fa-table-columns"></i><span>Dashboard</span>
             </a>
+
+
 
             <a class="side-link" href="cart.html">
               <i class="fa-solid fa-cart-shopping"></i><span>My Cart</span>
