--- a/frontend/my_orders.html
+++ b/frontend/my_orders.html
@@ -15,33 +15,7 @@
   <!-- sidebar toggle (no JS) -->
   <input class="side-toggle" type="checkbox" id="sideToggle" />
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="container nav">
-      <a href="index.html" class="logo">
-        <img src="logo.png" class="logo-img" alt="SellIt Logo">
-      </a>
 
-      <nav class="nav-links" aria-label="Main">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="products.html" class="nav-link">Products</a>
-        <a href="UserDashboard.html" class="nav-link">Dashboard</a>
-      </nav>
-
-      <div class="nav-right">
-        <a class="icon-btn" href="cart.html" aria-label="Cart">
-          <i class="fa-solid fa-cart-shopping"></i>
-        </a>
-        <a class="icon-btn" href="settings.html" aria-label="Settings">
-          <i class="fa-solid fa-gear"></i>
-        </a>
-      </div>
-
-      <label class="nav-toggle" for="sideToggle" aria-label="Toggle sidebar">
-        <span></span>
-      </label>
-    </div>
-  </header>
 
   <main>
     <!-- HERO -->
@@ -63,9 +37,16 @@
           </label>
 
           <nav class="side-nav">
+
+            <a class="side-link" href="index.html">
+              <i class="fa-solid fa-house"></i><span>Home</span>
+            </a>
+
             <a class="side-link" href="UserDashboard.html">
               <i class="fa-solid fa-table-columns"></i><span>Dashboard</span>
             </a>
+
+
 
             <a class="side-link" href="cart.html">
               <i class="fa-solid fa-cart-shopping"></i><span>My Cart</span>
@@ -78,6 +59,11 @@
             <a class="side-link" href="post-product.html">
               <i class="fa-solid fa-plus"></i><span>Post a Product</span>
             </a>
+
+            <a class="side-link" href="StudentBusinessDashboard.html">
+              <i class="fa-solid fa-chart-line"></i><span>Student Business Dashboard</span>
+            </a>
+
 
 
             <div class="side-divider"></div>
